# dinner

./: CMakeLists.txt  Changes  README.md  TODO
htdocs/: common.css  index.html  test.cgi  test.html
src/: CMakeLists.txt  dinner.c  dn_assert.h  dn_buffer.c  dn_buffer.h  dn_cgi.c  dn_cgi.h  dn_config.h  dn_daemonize.c  dn_daemonize.h  dn_event.c  dn_event.h  dn_file.c  dn_file.h  dn_io.c  dn_io.h  dn_log.c  dn_log.h  dn_request.c  dn_request.h  dn_response.c  dn_response.h  dn_say.c  dn_say.h
systemd/: README.txt  dinner.service
